force-app/main/default/objects/Account/fields/April16testfield1__c.field-meta.xml
<CustomField>
    <fullName>April16testfield1__c</fullName>
    <label>April16testfield1</label>
    <length>88</length>
    <type>Text</type>
</CustomField>