force-app/main/default/objects/Account/fields/April16testfield2__c.field-meta.xml
<CustomField>
    <fullName>April16testfield2__c</fullName>
    <label>April16testfield2</label>
    <length>39</length>
    <type>Text</type>
</CustomField>