force-app/main/default/objects/Account/fields/chandutextfield__c.field-meta.xml
<CustomField>
    <fullName>chandutextfield__c</fullName>
    <label>chandutextfield</label>
    <length>77</length>
    <type>Text</type>
</CustomField>