force-app/main/default/objects/Account/fields/testcustomfield1__c.field-meta.xml
<CustomField>
    <fullName>testcustomfield1__c</fullName>
    <label>testcustomfield1</label>
    <length>88</length>
    <type>Text</type>
</CustomField>