force-app/main/default/objects/Account/fields/testcustomfield2__c.field-meta.xml
<CustomField>
    <fullName>testcustomfield2__c</fullName>
    <label>testcustomfield2</label>
    <length>77</length>
    <type>Text</type>
</CustomField>