force-app/main/default/objects/Account/fields/testcustomfield3__c.field-meta.xml
<CustomField>
    <fullName>testcustomfield3__c</fullName>
    <label>testcustomfield3</label>
    <length>66</length>
    <type>Text</type>
</CustomField>